di setup and dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   dio: ^5.4.2+1
-  get_it: ^7.6.8
+  get_it: ^8.0.3
   flutter_spinkit: ^5.2.1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
@@ -29,28 +29,27 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.4.0
+  flutter_native_splash: ^2.3.11
   build_runner: ^2.4.9
   freezed: ^2.5.2
   json_serializable: ^6.7.1
   envied_generator: ^0.5.4+1
 
-#flutter_native_splash:
-#  image: assets/images/name_logo.png
-#  color: "#007DC3"
-#  android_12:
-#    color: "#007DC3"
-#
-#flutter_launcher_icons:
-#  android: true
-#  ios: true
-#  image_path: "assets/images/logo.png"
-#  background_color: "#ffffff"
-#  min_sdk_android: 21
-#  remove_alpha_ios: true
+flutter_native_splash:
+  image: "assets/images/splash_logo.png"
+  color: "#007DC3"
+  android_12:
+    color: "#007DC3"
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  background_color: "#ffffff"
+  min_sdk_android: 21
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
