--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   intl: ^0.17.0
   internet_connection_checker: ^1.0.0+1
   connectivity_plus: ^6.0.3
-#  internet_connection_checker:
-#  connectivity_plus:
+  cached_network_image: ^3.3.1
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
